chore: move generation logic for mocks, daos & dtos to 'resources/tools/generate'
