# generated/api/project-weather/model_city.go
@@ -1,0 +1,348 @@
+/*
+Weather API
+
+No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+
+API version: 1.0.0
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package client
+
+import (
+	"bytes"
+	"encoding/json"
+	"fmt"
+)
+
+// checks if the City type satisfies the MappedNullable interface at compile time
+var _ MappedNullable = &City{}
+
+// City struct for City
+type City struct {
+	Id        *string `json:"id,omitempty"`
+	Name      string  `json:"name"`
+	Country   string  `json:"country"`
+	Longitude string  `json:"longitude"`
+	Latitude  string  `json:"latitude"`
+	CreatedAt *int64  `json:"createdAt,omitempty"`
+	UpdatedAt *int64  `json:"updatedAt,omitempty"`
+}
+
+type _City City
+
+// NewCity instantiates a new City object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewCity(name string, country string, longitude string, latitude string) *City {
+	this := City{}
+	this.Name = name
+	this.Country = country
+	this.Longitude = longitude
+	this.Latitude = latitude
+	return &this
+}
+
+// NewCityWithDefaults instantiates a new City object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewCityWithDefaults() *City {
+	this := City{}
+	return &this
+}
+
+// GetId returns the Id field value if set, zero value otherwise.
+func (o *City) GetId() string {
+	if o == nil || IsNil(o.Id) {
+		var ret string
+		return ret
+	}
+	return *o.Id
+}
+
+// GetIdOk returns a tuple with the Id field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *City) GetIdOk() (*string, bool) {
+	if o == nil || IsNil(o.Id) {
+		return nil, false
+	}
+	return o.Id, true
+}
+
+// HasId returns a boolean if a field has been set.
+func (o *City) HasId() bool {
+	if o != nil && !IsNil(o.Id) {
+		return true
+	}
+
+	return false
+}
+
+// SetId gets a reference to the given string and assigns it to the Id field.
+func (o *City) SetId(v string) {
+	o.Id = &v
+}
+
+// GetName returns the Name field value
+func (o *City) GetName() string {
+	if o == nil {
+		var ret string
+		return ret
+	}
+
+	return o.Name
+}
+
+// GetNameOk returns a tuple with the Name field value
+// and a boolean to check if the value has been set.
+func (o *City) GetNameOk() (*string, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.Name, true
+}
+
+// SetName sets field value
+func (o *City) SetName(v string) {
+	o.Name = v
+}
+
+// GetCountry returns the Country field value
+func (o *City) GetCountry() string {
+	if o == nil {
+		var ret string
+		return ret
+	}
+
+	return o.Country
+}
+
+// GetCountryOk returns a tuple with the Country field value
+// and a boolean to check if the value has been set.
+func (o *City) GetCountryOk() (*string, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.Country, true
+}
+
+// SetCountry sets field value
+func (o *City) SetCountry(v string) {
+	o.Country = v
+}
+
+// GetLongitude returns the Longitude field value
+func (o *City) GetLongitude() string {
+	if o == nil {
+		var ret string
+		return ret
+	}
+
+	return o.Longitude
+}
+
+// GetLongitudeOk returns a tuple with the Longitude field value
+// and a boolean to check if the value has been set.
+func (o *City) GetLongitudeOk() (*string, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.Longitude, true
+}
+
+// SetLongitude sets field value
+func (o *City) SetLongitude(v string) {
+	o.Longitude = v
+}
+
+// GetLatitude returns the Latitude field value
+func (o *City) GetLatitude() string {
+	if o == nil {
+		var ret string
+		return ret
+	}
+
+	return o.Latitude
+}
+
+// GetLatitudeOk returns a tuple with the Latitude field value
+// and a boolean to check if the value has been set.
+func (o *City) GetLatitudeOk() (*string, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.Latitude, true
+}
+
+// SetLatitude sets field value
+func (o *City) SetLatitude(v string) {
+	o.Latitude = v
+}
+
+// GetCreatedAt returns the CreatedAt field value if set, zero value otherwise.
+func (o *City) GetCreatedAt() int64 {
+	if o == nil || IsNil(o.CreatedAt) {
+		var ret int64
+		return ret
+	}
+	return *o.CreatedAt
+}
+
+// GetCreatedAtOk returns a tuple with the CreatedAt field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *City) GetCreatedAtOk() (*int64, bool) {
+	if o == nil || IsNil(o.CreatedAt) {
+		return nil, false
+	}
+	return o.CreatedAt, true
+}
+
+// HasCreatedAt returns a boolean if a field has been set.
+func (o *City) HasCreatedAt() bool {
+	if o != nil && !IsNil(o.CreatedAt) {
+		return true
+	}
+
+	return false
+}
+
+// SetCreatedAt gets a reference to the given int64 and assigns it to the CreatedAt field.
+func (o *City) SetCreatedAt(v int64) {
+	o.CreatedAt = &v
+}
+
+// GetUpdatedAt returns the UpdatedAt field value if set, zero value otherwise.
+func (o *City) GetUpdatedAt() int64 {
+	if o == nil || IsNil(o.UpdatedAt) {
+		var ret int64
+		return ret
+	}
+	return *o.UpdatedAt
+}
+
+// GetUpdatedAtOk returns a tuple with the UpdatedAt field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *City) GetUpdatedAtOk() (*int64, bool) {
+	if o == nil || IsNil(o.UpdatedAt) {
+		return nil, false
+	}
+	return o.UpdatedAt, true
+}
+
+// HasUpdatedAt returns a boolean if a field has been set.
+func (o *City) HasUpdatedAt() bool {
+	if o != nil && !IsNil(o.UpdatedAt) {
+		return true
+	}
+
+	return false
+}
+
+// SetUpdatedAt gets a reference to the given int64 and assigns it to the UpdatedAt field.
+func (o *City) SetUpdatedAt(v int64) {
+	o.UpdatedAt = &v
+}
+
+func (o City) MarshalJSON() ([]byte, error) {
+	toSerialize, err := o.ToMap()
+	if err != nil {
+		return []byte{}, err
+	}
+	return json.Marshal(toSerialize)
+}
+
+func (o City) ToMap() (map[string]interface{}, error) {
+	toSerialize := map[string]interface{}{}
+	if !IsNil(o.Id) {
+		toSerialize["id"] = o.Id
+	}
+	toSerialize["name"] = o.Name
+	toSerialize["country"] = o.Country
+	toSerialize["longitude"] = o.Longitude
+	toSerialize["latitude"] = o.Latitude
+	if !IsNil(o.CreatedAt) {
+		toSerialize["createdAt"] = o.CreatedAt
+	}
+	if !IsNil(o.UpdatedAt) {
+		toSerialize["updatedAt"] = o.UpdatedAt
+	}
+	return toSerialize, nil
+}
+
+func (o *City) UnmarshalJSON(data []byte) (err error) {
+	// This validates that all required properties are included in the JSON object
+	// by unmarshalling the object into a generic map with string keys and checking
+	// that every required field exists as a key in the generic map.
+	requiredProperties := []string{
+		"name",
+		"country",
+		"longitude",
+		"latitude",
+	}
+
+	allProperties := make(map[string]interface{})
+
+	err = json.Unmarshal(data, &allProperties)
+
+	if err != nil {
+		return err
+	}
+
+	for _, requiredProperty := range requiredProperties {
+		if _, exists := allProperties[requiredProperty]; !exists {
+			return fmt.Errorf("no value given for required property %v", requiredProperty)
+		}
+	}
+
+	varCity := _City{}
+
+	decoder := json.NewDecoder(bytes.NewReader(data))
+	decoder.DisallowUnknownFields()
+	err = decoder.Decode(&varCity)
+
+	if err != nil {
+		return err
+	}
+
+	*o = City(varCity)
+
+	return err
+}
+
+type NullableCity struct {
+	value *City
+	isSet bool
+}
+
+func (v NullableCity) Get() *City {
+	return v.value
+}
+
+func (v *NullableCity) Set(val *City) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableCity) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableCity) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableCity(val *City) *NullableCity {
+	return &NullableCity{value: val, isSet: true}
+}
+
+func (v NullableCity) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableCity) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
