# resources/openapi/api.yaml
@@ -1,21 +1,24 @@
-openapi: " 1.0.0"
+openapi: 3.0.3
+
 info:
-  title: "Weather API"
-  version: "1.0.0"
+  title: Weather API
+  version: 1.0.0
+
 servers:
-  - url: ""
+  - url: /api
+
 paths:
   /cities:
     get:
       description: "Return all registered cities"
       tags:
-        -city
-      operationalId: GetAllCities
+        - city
+      operationId: GetAllCities
       parameters:
-        -name: id
-        in: path
-        schema:
-          type: string
+        - name: id
+          in: path
+          schema:
+            type: string
       responses:
         "200":
           description: Success.
@@ -53,7 +56,7 @@ paths:
     post:
       description: "Register a city"
       tags:
-        -city
+        - city
       operationId: RegisterCity
       requestBody:
         content:
@@ -99,14 +102,14 @@ paths:
     get:
       description: "Returns a specific city by id"
       tags:
-        -city
+        - city
       operationId: GetCityById
       parameters:
-        -name: id
-        in: path
-        required: true
-        schema:
-          type: string
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
       responses:
         "200":
           description: Success.
@@ -153,14 +156,14 @@ paths:
     put:
       description: "Updates a specific city based on its id"
       tags:
-        -city
+        - city
       operationId: UpdateCityById
       parameters:
-        -name: id
-        in: path
-        required: true
-        schema:
-          type: string
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
       requestBody:
         content:
           application/json:
@@ -212,14 +215,14 @@ paths:
     delete:
       description: "Deletes a specific binary based on its name (returns success even if not existing)"
       tags:
-        -city
+        - city
       operationId: DeleteCityById
       parameters:
-        -name: id
-        in: path
-      required: true
-      schema:
-        type: string
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
       responses:
         "204":
           description: Success.
@@ -228,10 +231,10 @@ paths:
           content:
             application/json:
               schema:
-              $ref: "#/components/schemas/Error"
-            example:
-              key: "BAD_REQUEST"
-              description: "Request payload is either missing or invalid"
+               $ref: "#/components/schemas/Error"
+              example:
+                key: "BAD_REQUEST"
+                description: "Request payload is either missing or invalid"
         "4XX":
           description: Client error.
           content:
@@ -251,28 +254,30 @@ paths:
                 key: "INTERNAL_SERVER_ERROR"
                 description: "An unexpected server error occurred"
 
+  # /forecasts?city={name}&period={period}
+
   /forecasts:
     get:
       description: "Return all registered forecasts"
       tags:
-        -forecast
-      operationalId: GetAllForecasts
+        - forecast
+      operationId: GetAllForecasts
       parameters:
-        -name: page
-        in: query
-        schema:
-          type: integer
-          format: int64
-          minimum: 1
-          default: 1
-      -name: limit
-      in: query
-      schema:
-        type: integer
-        format: int64
-        minimum: 1
-        maximum: 200
-        default: 20
+        - name: page
+          in: query
+          schema:
+            type: integer
+            format: int64
+            minimum: 1
+            default: 1
+        - name: limit
+          in: query
+          schema:
+            type: integer
+            format: int64
+            minimum: 1
+            maximum: 200
+            default: 20
       responses:
         "200":
           description: Success.
@@ -320,7 +325,7 @@ paths:
     post:
       description: "Register a Forecast"
       tags:
-        -forecast
+        - forecast
       operationId: CreateForecast
       requestBody:
         content:
@@ -366,14 +371,14 @@ paths:
     get:
       description: "Returns a specific forecast by id"
       tags:
-        -city
+        - city
       operationId: GetForecastById
       parameters:
-        -name: id
-        in: path
-        required: true
-        schema:
-          type: string
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
       responses:
         "200":
           description: Success.
@@ -420,14 +425,14 @@ paths:
     put:
       description: "Updates a specific Forecast based on its id"
       tags:
-        -forecast
+        - forecast
       operationId: UpdateForecast
       parameters:
-        -name: id
-        in: path
-        required: true
-        schema:
-          type: string
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
       requestBody:
         content:
           application/json:
@@ -479,14 +484,14 @@ paths:
     delete:
       description: "Deletes a specific binary based on its name (returns success even if not existing)"
       tags:
-        -city
-      operationId: DeleteCityById
+        - city
+      operationId: DeleteForecastById
       parameters:
-        -id: name
-        in: path
-      required: true
-      schema:
-        type: string
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
       responses:
         "204":
           description: Success.
@@ -495,10 +500,10 @@ paths:
           content:
             application/json:
               schema:
-              $ref: "#/components/schemas/Error"
-            example:
-              key: "BAD_REQUEST"
-              description: "Request payload is either missing or invalid"
+                $ref: "#/components/schemas/Error"
+              example:
+                key: "BAD_REQUEST"
+                description: "Request payload is either missing or invalid"
         "4XX":
           description: Client error.
           content:
@@ -522,7 +527,7 @@ paths:
     get:
       description: "Returns a specific binary based on its name"
       tags:
-        -weather
+        - weather
       operationId: GetWeatherByCity
       parameters:
         - name: city
@@ -541,7 +546,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Weather"
+                $ref: "#/components/schemas/Forecast"
         "400":
           description: Malformed or invalid payload.
           content:
@@ -633,7 +638,7 @@ components:
           type: string
           example: "922613c8-60ce-42f4-9823-a0ee9df38828"
         forecastDate:
-          type: time
+          type: string
         temperature:
           type: string
           example: "20.0"
@@ -687,125 +692,3 @@ components:
           type: integer
           format: int64
           example: 1
-    Weather:                   #??
-      type: object
-      required:
-        - type
-      properties:
-        id:
-          type: string
-          example: "922613c8-60ce-42f4-9823-a0ee9df38828"
-        createdAt:
-          type: integer
-          readOnly: true
-          format: int64
-          example: 1694554228
-        updatedAt:
-          type: integer
-          readOnly: true
-          format: int64
-          example: 1694557228
-        deadline:
-          type: integer
-          readOnly: true
-          format: int64
-          example: 1694557228
-        type:
-          $ref: "#/components/schemas/TaskType"
-        status:
-          $ref: "#/components/schemas/TaskStatus"
-        parameter:
-          type: object
-          example:
-            {
-              "name": "default_v4",
-              "checksum": "f7efd7168f50fd6b574c1d948779ac1cc3d70afcc95c5757ff82f57bfa06b194",
-              "url": "https://no-such-thing.6river.tech/binaries/some-awesome-binary-name/1.1.3/binary.wasm",
-            }
-        result:
-          type: object
-          example: { "objectID": "922613c8-60ce-42f4-9823-a0ee9df38828" }
-    TaskType:
-      type: string
-      enum:
-        - CreateBinary
-        - UpdateBinaryData
-      description: The type of a task
-    TaskStatus:
-      type: string
-      enum:
-        - Pending
-        - Running
-        - Failed
-        - Done
-      description: The status of a task
-    CreateTask:
-      type: object
-      required:
-        - type
-      properties:
-        deadline:
-          type: integer
-          format: int64
-          example: 1694557228
-        type:
-          $ref: "#/components/schemas/TaskType"
-        parameter:
-          type: object
-          example:
-            {
-              "name": "default_v4",
-              "checksum": "f7efd7168f50fd6b574c1d948779ac1cc3d70afcc95c5757ff82f57bfa06b194",
-              "url": "https://no-such-thing.6river.tech/binaries/some-awesome-binary-name/1.1.3/binary.wasm",
-            }
-    TaskParamCreateForecast:
-      type: object
-      required:
-        - cityId
-        - forecastDate
-        - temperature
-        - condition
-      properties:
-        cityId:
-          type: string
-          example: "922613c8-60ce-42f4-9823-a0ee9df38828"
-        forecastDate:
-          type: time
-        temperature:
-          type: string
-          example: "12.0"
-        condition:
-          type: string
-          example: "Sunny"
-    TaskParamUpdateForecastData:
-      type: object
-      required:
-        - url
-        - name
-        - checksum
-      properties:
-        cityId:
-          type: string
-          example: "922613c8-60ce-42f4-9823-a0ee9df38828"
-        forecastDate:
-          type: time
-        temperature:
-          type: string
-          example: "12.0"
-        condition:
-          type: string
-          example: "Sunny"
-    TaskResultError:
-      type: object
-      required:
-        - error
-      properties:
-        error:
-          type: string
-          example: "Error getting weather"
-    TaskResultObjectWeather:
-      type: object
-      required:
-        - current/forecast   #??
-        - location
-      properties:
